kubernetes/apps/observability/grafana/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  hostnames:
    - "${SUBDOMAIN}.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: grafana
          port: 80
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-analogpuddle
spec:
  hostnames:
    - "${SUBDOMAIN}.analogpuddle.com"
  parentRefs:
    - name: envoy-external-ap
      namespace: network
  rules:
    - backendRefs:
        - name: grafana
          port: 80
